# nikoli-puzzle-solver

./: .gitignore  .gitmodules  LICENSE  README.md  app.js  app.py  index.html  package-lock.json  package.json  pyproject.toml  readme.md  server.js  supported_puzzles.yml  tsconfig.json  webpack.config.js
lib/: __init__.py  _constraints.py  _directions.py  _global_timeout_lock.py  _lattice_type.py  _lattices.py  _paths.py  _penpa.py  _puzzle.py  _symbols.py  _union_find.py  _utils.py  directions.py  penpa.py  puzzle.py
nikoli_puzzle_solver/: __init__.py
public/: docs.html  index.css  index.html  test.html
solvers/: __init__.py  abstract_solver.py  anglers.py  aqre.py  aquarium.py  araf.py  arrows.py  balanceloop.py  battleships.py  binairo.py  calcudoku.py  canalview.py  castlewall.py  cave.py  chocobanana.py  chocona.py  clouds.py  common_rules.py  compass.py  countryroad.py  creek.py  crisscross.py  crossthestreams.py  dominion.py  dominosa.py  doppelblock.py  dosunfuwari.py  dotchiloop.py  doubleback.py  doublechoco.py  easyas.py  easyasabc.py  fillomino.py  fivecells.py  fourwinds.py  futoshiki.py  geradeweg.py  gokigennaname.py  hashiwokakero.py  hebiichigo.py  (+83 more)
src/: index.ts
src/internal/: penpa.ts
src/lib/: collections.ts  constraints.ts  index.ts  network.ts  puzzle.ts  solution.ts  solver.ts  symbol.ts  unionfind.ts
src/solvers/: anglers.ts  aqre.ts  aquarium.ts  araf.ts  arrows.ts  balanceloop.ts  battleship.ts  cave.ts  (+131 more)
static/: app.js  index.html
test/: test_nurikabe.py  test_solvers.py  test_sudoku.py
tests/: resync_tests.py  test_solvers.py
(+5 files in other folders)
