[tool.poetry]
name = "nikoli-puzzle-solver"
version = "0.1.0"
description = ""
authors = ["Kevin Y. Chen"]

[tool.poetry.dependencies]
"ruamel.yaml" = "^0.17.21"
Flask = "^2.2.5"
black = "^22.12.0"
grilops = "^0.10.3"
pytest = "^7.2.0"
python = "^3.7"
werkzeug = "^2.2.3"
z3-solver = "^4.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
